# nmriprep

./: LICENCE  README.md  pyproject.toml
.github/workflows/: ruff.yml
nmriprep/: image.py  measure.py  napari.py  parser.py  plotting.py  utils.py
nmriprep/argprep/: argprep.py  calibration.py  fieldprep.py
nmriprep/data/: standards.json
nmriprep/src/: parser.py  utils.py
nmriprep/src/argprep/: argprep.py  calibration.py
nmriprep/src/data/: standards.json
